# python

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  crossenv.sh  crossenv_setup.py  crossenv_setup.sh  docker-compose.yml  install_modules.sh  libffi.imports  requirements.txt  sanity_check.py  tasks.py  workon.sh
.github/workflows/: build.yml  release.yml  tests.yml
cfaasm/: tester.py
crossenv/: requirements.txt
crossenv-tasks/: __init__.py
crossenv/tasks/: __init__.py  env.py  libs.py  modules.py
docker/: cpython.dockerfile
func/: CMakeLists.txt
func/cpp/: CMakeLists.txt  py_func.cpp  pyinit.c
func/python/: bench_deltablue.py
pyfaasm/: CMakeLists.txt  Dockerfile  README.md  setup.py  test_requirements.txt  tester.py
pyfaasm/pyfaasm/: __init__.py  cfaasm.c  config.py  core.py  matrix.py  matrix_data.py  objects.py
pyfaasm/test/: test_emulator.py  test_inputs.py  test_matrices.py  test_simple.py  test_state.py
scripts/: crossenv_setup.py  install_modules.sh
tasks/: __init__.py  container.py  cpython.py  docker.py  env.py  ffi.py  format_code.py  func.py  git.py  libs.py  modules.py  mxnet.py  pyfaasm.py  runtime.py
